# inkscape-for-trace

./: .appveyor.yml  .bzrignore  .clang-tidy  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .snapcraft.yaml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  Doxyfile  HACKING.txt  INSTALL.md  Info.plist.in  Makefile.am  NEWS  NEWS.md  README.md  TRANSLATORS  _clang-format  appveyor.sh  appveyor.yml  astylerc  build-x64.xml  build.xml  clang_format_diff  config.h.cmake  config.h.meson  configure.ac  download-gtest.sh  inkscape.appdata.xml.in  inkscape.desktop.in  inkscape.desktop.template  inkscape.pod  live_effects.patch  meson.build  mingwenv.bat  (+10 more)
po/: CMakeLists.txt  LINGUAS  POTFILES.in  POTFILES.inx.in  POTFILES.py.in  POTFILES.skip  POTFILES.src.in  POTFILES.ui.in  POTFILES.xml.in  _README  am.po  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_BD.po  br.po  brx.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  doi.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US@piglatin.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  (+65 more)
po/its/: inx.its  inx.loc  menus.its  menus.loc  units.its  units.loc
share/: CMakeLists.txt  README.md  new
share/attributes/: CMakeLists.txt  attindex.html  css_defaults  cssprops  genMapDataCSS.pl  genMapDataSVG.pl  propidx.html  svgprops
share/branding/: CMakeLists.txt
share/doc/: CMakeLists.txt  LICENSE
share/examples/: CMakeLists.txt
share/extensions/: Makefile.am  ai_input.inx  bezmisc.py  cgm_input.inx  dpiswitcher.py  dxf12_outlines.inx  dxf12_outlines.py  dxf_input.py  dxf_outlines.inx  dxf_outlines.py  embedimage.py  empty_desktop.inx  empty_generic.inx  empty_generic.py  empty_page.inx  empty_page.py  extractimage.inx  extractimage.py  foldablebox.py  frame.inx  frame.py  funcplot.py  gcodetools.py  gcodetools_about.inx  gcodetools_area.inx  gcodetools_lathe.inx  gcodetools_path_to_gcode.inx  gcodetools_prepare_path_for_plasma.inx  gimp_xcf.py  grid_cartesian.py  grid_isometric.py  grid_polar.py  guides_creator.inx  guides_creator.py  hpgl_decoder.py  hpgl_encoder.py  hpgl_input.inx  hpgl_input.py  hpgl_output.inx  hpgl_output.py  (+51 more)
share/filters/: CMakeLists.txt  i18n.py  samplify.py
share/fonts/: CMakeLists.txt  README
share/gradients/: CMakeLists.txt
share/icons/: CMakeLists.txt
share/keys/: CMakeLists.txt  acd-canvas.xml  adobe-illustrator-cs2.xml  carbon.xml  corel-draw-x4.xml  corel-draw-x8.xml  default.xml  inkscape.xml  macromedia-freehand-mx.xml  right-handed-illustration.xml  xara.xml
share/markers/: CMakeLists.txt
share/paint/: CMakeLists.txt  i18n.py
share/palettes/: CMakeLists.txt  Makefile.am  MunsellChart.gpl  i18n.py  soc2gpl.py
share/patterns/: CMakeLists.txt
share/pixmaps/: CMakeLists.txt
share/screens/: CMakeLists.txt  TRANSLATING
share/symbols/: CMakeLists.txt  Makefile.am  i18n.py
share/templates/: CMakeLists.txt  Makefile.am  README  create_default_templates.py  create_defaults.pl  i18n.py
share/themes/: CMakeLists.txt  README
share/tutorials/: CMakeLists.txt
share/ui/: Adwaita-dark.css  Adwaita.css  CMakeLists.txt  command-palette-operation.glade  commands-toolbar.ui  dialog-css.ui  dialog-livepatheffect-add-effect.ui  dialog-livepatheffect-add.glade  dialog-livepatheffect-add.ui  dialog-livepatheffect-effect.glade  dialog-text-edit.glade  dialog-trace.glade  inkscape-about.glade  inkscape-start.glade  lpe-selector-item.ui  lpe-selector.ui  menu-view.ui  menus.xml  select-toolbar.ui  snap-toolbar.ui  style.css  tool-toolbar.ui  toolbar-commands.ui  toolbar-select.ui  toolbar-tool.ui  view-menu.ui  win32.css  zoom-menu.ui
src/: CMakeLists.txt  Makefile.am  Makefile_insert  arc-context.cpp  arc-context.h  attribute-rel-css.cpp  attribute-rel-css.h  attribute-rel-svg.cpp  attribute-rel-svg.h  attribute-rel-util.cpp  attribute-rel-util.h  attribute-sort-util.cpp  attribute-sort-util.h  attributes-test.h  attributes.cpp  attributes.h  auto-save.cpp  auto-save.h  axis-manip.cpp  axis-manip.h  bad-uri-exception.h  box3d-context.cpp  box3d-context.h  box3d-side.cpp  box3d-side.h  box3d.cpp  box3d.h  cms-color-types.h  cms-system.h  color-profile-cms-fns.h  color-profile.cpp  color-profile.h  color-rgba.h  color.cpp  color.h  colorspace.h  common-context.cpp  common-context.h  composite-undo-stack-observer.cpp  composite-undo-stack-observer.h  (+440 more)
src/2geom/: !PLEASE DON'T MAKE CHANGES IN THESE FILES.README  2geom.h  CMakeLists.txt  Makefile_insert  basic-intersection.cpp  bezier.h  conicsec.cpp  conicsec.h  ellipse.cpp  elliptical-arc-from-sbasis.cpp  elliptical-arc.cpp  intersection-graph.cpp  interval.h  line.cpp  meson.build  path.cpp  piecewise.h  point.cpp  point.h  pointwise.cpp  pointwise.h  polynomial.cpp  satellite-enum.h  satellite.cpp  satellite.h  sbasis-to-bezier.cpp  sbasis.cpp
src/actions/: CMakeLists.txt  README  actions-base.cpp  actions-base.h  actions-canvas-mode.cpp  actions-canvas-mode.h  actions-canvas-snapping.cpp  actions-canvas-snapping.h  actions-canvas-transform.cpp  actions-canvas-transform.h  actions-extra-data.cpp  actions-extra-data.h  actions-file.cpp  actions-file.h  actions-helper.cpp  actions-helper.h  actions-object-align.cpp  actions-object-align.h  actions-object.cpp  actions-object.h  actions-output.cpp  actions-output.h  actions-selection.cpp  actions-selection.h  actions-transform.cpp  actions-transform.h  actions-window.cpp  actions-window.h  selection.cpp
src/debug/: CMakeLists.txt  demangle.cpp  demangle.h  event-tracker.h  event.h  gc-heap.h  gdk-event-latency-tracker.cpp  gdk-event-latency-tracker.h  heap.cpp  heap.h  log-display-config.cpp  log-display-config.h  logger.cpp  logger.h  meson.build  simple-event.h  sysv-heap.cpp  sysv-heap.h  timestamp.cpp  timestamp.h
src/dialogs/: dialog-events.cpp  dialog-events.h
src/display/: CMakeLists.txt  Makefile_insert  README  cairo-templates.h  cairo-utils.cpp  cairo-utils.h  canvas-arena.cpp  canvas-arena.h  canvas-axonomgrid.cpp  (+117 more)
testfiles/: CMakeLists.txt  CTestCustom.cmake.in  README  doc-per-case-test.cpp  doc-per-case-test.h  fuzzer.cpp  fuzzer.dict  unittest.cpp
(+2313 files in other folders)
